# de

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  de.toml  dist-workspace.toml  justfile
src/: cli.rs  config.rs  constants.rs  main.rs  shim.rs
src/commands/: config.rs  doctor.rs  exec.rs  exec_all.rs  fallthrough.rs  init.rs  list.rs  mod.rs  run.rs  scan.rs  self_.rs  setup.rs  start.rs  status.rs  stop.rs  update.rs
src/commands/git/: base_reset.rs  mod.rs  switch.rs
src/commands/shim/: add.rs  install.rs  list.rs  mod.rs  reinstate.rs  remove.rs  uninstall.rs
src/commands/task/: add.rs  check.rs  list.rs  mod.rs  remove.rs
src/commands/workspace/: config.rs  info.rs  mod.rs  run.rs  set.rs  unset.rs
src/config/: global.rs  project.rs
src/manifest/: config.rs  mod.rs
src/project/: config.rs  mod.rs  task.rs
src/setup/: export.rs  mod.rs  project.rs  snapshot.rs  types.rs  utils.rs
src/setup/project/: config.rs
src/setup/snapshot/: apply.rs  checksum.rs  create.rs  mod.rs  types.rs
src/types/: mod.rs
src/utils/: cli.rs  formatter.rs  git.rs  mod.rs  path.rs  serde.rs  shim.rs  theme.rs  ui.rs  unix.rs  zip.rs
src/workspace/: config.rs  dependency.rs  mod.rs  utils.rs
