[package]
name = "de"
description = "A simple CLI for managing isolated development environments with Docker Compose."
version = "0.3.0"
edition = "2024"
repository = "https://github.com/umbra-ecosystem/de"

[dependencies]
carbon = "0.1.0"
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive"] }
color-eyre = "0.6.5"
config = "0.15.13"
console = "0.16.0"
dialoguer = "0.11.0"
directories = "6.0.0"
dotenvy = "0.15.7"
eyre = "0.6.12"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.0"
tracing = "0.1.41"
walkdir = "2.5.0"

[dependencies.axoupdater]
version = "0.9.0"
default-features = false
features = ["github_releases", "blocking"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
