[package]
name = "de"
description = "A simple CLI for managing isolated development environments with Docker Compose."
version = "0.4.0"
edition = "2024"
repository = "https://github.com/umbra-ecosystem/de"

[dependencies]
carbon = "0.1.0"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.41", features = ["derive"] }
color-eyre = "0.6.5"
config = "0.15.13"
console = "0.16.0"
dialoguer = "0.11.0"
directories = "6.0.0"
dotenvy = "0.15.7"
eyre = "0.6.12"
itertools = "0.14.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
toml = "0.9.0"
tracing = "0.1.41"
walkdir = "2.5.0"
indicatif = "0.18.0"
tempfile = "3.20.0"

[dependencies.axoupdater]
version = "0.9.0"
default-features = false
features = ["github_releases", "blocking"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
